Fixing nginx and github CI

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,14 +13,14 @@ http {
     gzip_disable "MSIE [1-6]\.";
     server {
         listen 443 ssl;
-        server_name traplatform.ru;
+        server_name tra.hydralabs.ru;
 
-        add_header 'Access-Control-Allow-Origin' 'https://traplatform.ru';
+        add_header 'Access-Control-Allow-Origin' 'https://tra.hydralabs.ru';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT, PATCH';
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
 
-        ssl_certificate /etc/letsencrypt/live/traplatform.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/traplatform.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/tra.hydralabs.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tra.hydralabs.ru/privkey.pem;
 
         root /usr/share/nginx/html;
         include /etc/nginx/mime.types;
@@ -32,9 +32,9 @@ http {
     }
     server {
         listen 80;
-        server_name traplatform.ru;
+        server_name tra.hydralabs.ru;
 
-        add_header 'Access-Control-Allow-Origin' 'https://traplatform.ru';
+        add_header 'Access-Control-Allow-Origin' 'https://tra.hydralabs.ru';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT, PATCH';
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
 
@@ -48,10 +48,10 @@ http {
     }
     server {
         listen 443 ssl;
-        server_name api.traplatform.ru;
+        server_name traapi.hydralabs.ru;
 
-        ssl_certificate /etc/letsencrypt/live/traplatform.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/traplatform.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/traapi.hydralabs.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/traapi.hydralabs.ru/privkey.pem;
 
         location / {
             proxy_pass http://backend:8080;
@@ -62,7 +62,7 @@ http {
     }
     server {
         listen 80;
-        server_name api.traplatform.ru;
+        server_name traapi.hydralabs.ru;
 
         location / {
 
@@ -74,10 +74,10 @@ http {
     }
     server {
         listen 443 ssl;
-        server_name grafana.traplatform.ru;
+        server_name tragrafana.hydralabs.ru;
 
-        ssl_certificate /etc/letsencrypt/live/traplatform.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/traplatform.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/tragrafana.hydralabs.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tragrafana.hydralabs.ru/privkey.pem;
 
         location / {
             proxy_pass http://grafana:3000;
@@ -88,7 +88,7 @@ http {
     }
     server {
         listen 80;
-        server_name grafana.traplatform.ru;
+        server_name tragrafana.hydralabs.ru;
 
         location / {
 
