--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,8 @@ http {
     gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
     gzip_disable "MSIE [1-6]\.";
+
+    # Frontend server configuration
     server {
         listen 443 ssl;
         server_name tra.hydralabs.ru;
@@ -30,6 +32,7 @@ http {
             try_files $uri $uri/ /index.html;
         }
     }
+
     server {
         listen 80;
         server_name tra.hydralabs.ru;
@@ -46,38 +49,70 @@ http {
             try_files $uri $uri/ /index.html;
         }
     }
+
+    # TRA Backend API proxy
     server {
         listen 443 ssl;
         server_name traapi.hydralabs.ru;
 
-        ssl_certificate /etc/letsencrypt/live/traapi.hydralabs.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/traapi.hydralabs.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/tra.hydralabs.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tra.hydralabs.ru/privkey.pem;
 
         location / {
-            proxy_pass http://backend:8080;
+            proxy_pass http://tra_backend:9999;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
+
     server {
         listen 80;
         server_name traapi.hydralabs.ru;
 
         location / {
-
-            proxy_pass http://backend:8080;
+            proxy_pass http://tra_backend:9999;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
+
+    # GPT Service API proxy
+    server {
+        listen 443 ssl;
+        server_name tragpt.hydralabs.ru;
+
+        ssl_certificate /etc/letsencrypt/live/tragpt.hydralabs.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tragpt.hydralabs.ru/privkey.pem;
+
+        location / {
+            proxy_pass http://gpt_service:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name tragpt.hydralabs.ru;
+
+        location / {
+            proxy_pass http://gpt_service:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
+
+    # Optional Grafana instance
     server {
         listen 443 ssl;
         server_name tragrafana.hydralabs.ru;
 
-        ssl_certificate /etc/letsencrypt/live/tragrafana.hydralabs.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tragrafana.hydralabs.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/tra.hydralabs.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tra.hydralabs.ru/privkey.pem;
 
         location / {
             proxy_pass http://grafana:3000;
@@ -86,12 +121,12 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
+
     server {
         listen 80;
         server_name tragrafana.hydralabs.ru;
 
         location / {
-
             proxy_pass http://grafana:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
