Fixing nginx conf #3

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,8 +21,8 @@ http {
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT, PATCH';
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
 
-        ssl_certificate /etc/letsencrypt/live/tra.hydralabs.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tra.hydralabs.ru/privkey.pem;
+#         ssl_certificate /etc/letsencrypt/live/tra.hydralabs.ru/fullchain.pem;
+#         ssl_certificate_key /etc/letsencrypt/live/tra.hydralabs.ru/privkey.pem;
 
         root /usr/share/nginx/html;
         include /etc/nginx/mime.types;
@@ -55,8 +55,8 @@ http {
         listen 443 ssl;
         server_name traapi.hydralabs.ru;
 
-        ssl_certificate /etc/letsencrypt/live/tra.hydralabs.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tra.hydralabs.ru/privkey.pem;
+#         ssl_certificate /etc/letsencrypt/live/tra.hydralabs.ru/fullchain.pem;
+#         ssl_certificate_key /etc/letsencrypt/live/tra.hydralabs.ru/privkey.pem;
 
         location / {
             proxy_pass http://tra_backend:9999;
@@ -83,8 +83,8 @@ http {
         listen 443 ssl;
         server_name tragpt.hydralabs.ru;
 
-        ssl_certificate /etc/letsencrypt/live/tragpt.hydralabs.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tragpt.hydralabs.ru/privkey.pem;
+#         ssl_certificate /etc/letsencrypt/live/tragpt.hydralabs.ru/fullchain.pem;
+#         ssl_certificate_key /etc/letsencrypt/live/tragpt.hydralabs.ru/privkey.pem;
 
         location / {
             proxy_pass http://gpt_service:8080;
