--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tra-frontend",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -30,6 +30,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "javascript-obfuscator": "^4.1.0",
     "jwt-decode": "3.1.2",
+    "mitt": "^3.0.1",
     "pako": "^2.1.0",
     "pinia": "2.0.35",
     "plantuml-encoder": "^1.4.0",
